<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.analyzer</groupId>
  <artifactId>spring-hierarchy-analyzer</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <name>Spring Hierarchy Analyzer</name>
  <description>
    Analyzes Spring Controller → Service → Impl call hierarchies from a JAR file.
    Extracts parameter types (including generics), return types, Spring annotations,
    and BeanUtils usage. Outputs Markdown reports and LLM-ready context blocks.
  </description>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <asm.version>9.7</asm.version>
  </properties>

  <dependencies>
    <!-- ASM: bytecode analysis (Java 8~23 용) -->
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>${asm.version}</version>
    </dependency>

    <!-- 테스트 -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- 실행 가능한 fat JAR 생성 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals><goal>shade</goal></goals>
            <configuration>
              <transformers>
                <transformer implementation=
                  "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>io.github.analyzer.Main</mainClass>
                </transformer>
              </transformers>
              <finalName>spring-hierarchy-analyzer</finalName>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
